--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -56,7 +56,7 @@ a {
   font-weight: 700;
   font-family: $font-sans;
   letter-spacing: -0.02em;
-  margin: 0 auto 3rem;
+  margin: 0 auto 2rem;
   position: relative;
 
   &::after {
